[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "hhat-lang"
description = "H-hat quantum programming language Python interpreter"
dynamic = ["version"]
authors = [
  { name="Eduardo Maschio", email="eduardo.maschio@hhat-lang.org" }
]
readme = "README"
requires-python = ">=3.12"
license = { text="MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Interpreters",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [

]

[project.urls]
Home = "https://github.com/hhat-lang/hhat_lang"
Issues = "https://github.com/hhat-lang/hhat_lang/issues"
Documentation ="https://docs.hhat-lang.org"

